A slightly better header

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,49 +1,49 @@
-/* line 33, ../src/main.sass */
+/* line 34, ../src/main.sass */
 body {
   background: #efeff4;
 }
-/* line 35, ../src/main.sass */
+/* line 36, ../src/main.sass */
 body.bp {
   background: #efeff4;
 }
-/* line 37, ../src/main.sass */
+/* line 38, ../src/main.sass */
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   color: #60646c;
   font-weight: bold;
   letter-spacing: -0.05em;
   text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px;
 }
-/* line 42, ../src/main.sass */
+/* line 43, ../src/main.sass */
 body.bp h1 a, body.bp h2 a, body.bp h3 a, body.bp h4 a, body.bp h5 a, body.bp h6 a {
   color: #9ca1ad;
 }
-/* line 44, ../src/main.sass */
+/* line 45, ../src/main.sass */
 body.bp h1 a:visited, body.bp h2 a:visited, body.bp h3 a:visited, body.bp h4 a:visited, body.bp h5 a:visited, body.bp h6 a:visited {
   color: #9ca1ad;
 }
-/* line 46, ../src/main.sass */
+/* line 47, ../src/main.sass */
 body.bp h1 a:hover, body.bp h1 a:active, body.bp h2 a:hover, body.bp h2 a:active, body.bp h3 a:hover, body.bp h3 a:active, body.bp h4 a:hover, body.bp h4 a:active, body.bp h5 a:hover, body.bp h5 a:active, body.bp h6 a:hover, body.bp h6 a:active {
   color: #86adff;
 }
-/* line 48, ../src/main.sass */
+/* line 49, ../src/main.sass */
 body.bp h1 a:hover, body.bp h2 a:hover, body.bp h3 a:hover, body.bp h4 a:hover, body.bp h5 a:hover, body.bp h6 a:hover {
   text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px, rgba(51, 136, 204, 0.5) 0 0 4px;
 }
-/* line 50, ../src/main.sass */
+/* line 51, ../src/main.sass */
 body.bp a {
   text-decoration: none;
   color: #60646c;
 }
-/* line 53, ../src/main.sass */
+/* line 54, ../src/main.sass */
 body.bp a:visited {
   color: #60646c;
 }
-/* line 55, ../src/main.sass */
+/* line 56, ../src/main.sass */
 body.bp a:hover, body.bp a:active {
   color: #86adff;
 }
 
-/* line 59, ../src/main.sass */
+/* line 60, ../src/main.sass */
 * {
   -moz-transition-property: all;
   -webkit-transition-property: all;
@@ -55,28 +55,60 @@ body.bp a:hover, body.bp a:active {
   transition-duration: 0.5s;
 }
 
-/* line 69, ../src/main.sass */
+/* line 63, ../src/main.sass */
+header {
+  height: 80px;
+  -moz-border-radius: 0 0 8px 8px;
+  -webkit-border-radius: 0 0 8px 8px;
+  -o-border-radius: 0 0 8px 8px;
+  -ms-border-radius: 0 0 8px 8px;
+  -khtml-border-radius: 0 0 8px 8px;
+  border-radius: 0 0 8px 8px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 5px 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 5px 5px;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 5px 5px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 5px 5px;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #51555c), color-stop(100%, #303237));
+  background-image: -webkit-linear-gradient(top, #51555c, #303237);
+  background-image: -moz-linear-gradient(top, #51555c, #303237);
+  background-image: -o-linear-gradient(top, #51555c, #303237);
+  background-image: -ms-linear-gradient(top, #51555c, #303237);
+  background-image: linear-gradient(top, #51555c, #303237);
+}
+/* line 68, ../src/main.sass */
+header hgroup {
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 710px;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html header hgroup {
+  overflow-x: hidden;
+}
+
+/* line 78, ../src/main.sass */
 .clickable {
   cursor: pointer;
 }
 
-/* line 73, ../src/main.sass */
+/* line 82, ../src/main.sass */
 #container {
   width: 950px;
   margin: 0 auto;
 }
 
-/* line 78, ../src/main.sass */
+/* line 87, ../src/main.sass */
 a {
   text-decoration: none;
 }
 
-/* line 81, ../src/main.sass */
+/* line 90, ../src/main.sass */
 h1 {
   text-align: center;
 }
 
-/* line 91, ../src/main.sass */
+/* line 100, ../src/main.sass */
 .block {
   display: inline;
   float: left;
@@ -100,20 +132,20 @@ h1 {
 * html .block {
   overflow-x: hidden;
 }
-/* line 88, ../src/main.sass */
+/* line 97, ../src/main.sass */
 .block > * {
   padding: 20px;
 }
-/* line 96, ../src/main.sass */
+/* line 105, ../src/main.sass */
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
-/* line 98, ../src/main.sass */
+/* line 107, ../src/main.sass */
 .block:last-child {
   margin-right: 0;
 }
 
-/* line 130, ../src/main.sass */
+/* line 140, ../src/main.sass */
 #choixlang {
   display: inline;
   float: left;
@@ -125,36 +157,36 @@ h1 {
 * html #choixlang {
   overflow-x: hidden;
 }
-/* line 104, ../src/main.sass */
+/* line 113, ../src/main.sass */
 #choixlang a:hover {
+  color: #efeff4;
+  background-color: rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+}
+/* line 117, ../src/main.sass */
+#choixlang a {
   -moz-border-radius: 2ex;
   -webkit-border-radius: 2ex;
   -o-border-radius: 2ex;
   -ms-border-radius: 2ex;
   -khtml-border-radius: 2ex;
   border-radius: 2ex;
-  color: #efeff4;
-  background-color: #868b96;
-}
-/* line 108, ../src/main.sass */
-#choixlang a {
   text-align: center;
   width: 100%;
   display: inline-block;
   color: #b4b8c5;
 }
-/* line 113, ../src/main.sass */
+/* line 123, ../src/main.sass */
 #choixlang a:hover {
   color: #efeff4;
 }
 
-/* line 135, ../src/main.sass */
+/* line 145, ../src/main.sass */
 #choixrss {
   text-align: right;
-  display: inline;
-  float: left;
-  position: relative;
-  margin: 0 -720px 1.5em 720px;
   display: inline;
   float: left;
   margin-right: 10px;
@@ -166,30 +198,34 @@ h1 {
 * html #choixrss {
   overflow-x: hidden;
 }
-/* line 104, ../src/main.sass */
+/* line 113, ../src/main.sass */
 #choixrss a:hover {
+  color: #efeff4;
+  background-color: rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+}
+/* line 117, ../src/main.sass */
+#choixrss a {
   -moz-border-radius: 2ex;
   -webkit-border-radius: 2ex;
   -o-border-radius: 2ex;
   -ms-border-radius: 2ex;
   -khtml-border-radius: 2ex;
   border-radius: 2ex;
-  color: #efeff4;
-  background-color: #868b96;
-}
-/* line 108, ../src/main.sass */
-#choixrss a {
   text-align: center;
   width: 100%;
   display: inline-block;
   color: #b4b8c5;
 }
-/* line 113, ../src/main.sass */
+/* line 123, ../src/main.sass */
 #choixrss a:hover {
   color: #efeff4;
 }
 
-/* line 142, ../src/main.sass */
+/* line 151, ../src/main.sass */
 #mainnav {
   display: inline;
   float: left;
@@ -202,7 +238,7 @@ h1 {
 * html #mainnav {
   overflow-x: hidden;
 }
-/* line 146, ../src/main.sass */
+/* line 155, ../src/main.sass */
 #mainnav ul {
   width: 350px;
   height: 2.2ex;
@@ -211,7 +247,7 @@ h1 {
   list-style-type: none;
   margin: 0 auto;
 }
-/* line 153, ../src/main.sass */
+/* line 162, ../src/main.sass */
 #mainnav ul li {
   display: inline;
   float: left;
@@ -224,34 +260,38 @@ h1 {
 * html #mainnav ul li {
   overflow-x: hidden;
 }
-/* line 104, ../src/main.sass */
+/* line 113, ../src/main.sass */
 #mainnav ul li a:hover {
+  color: #efeff4;
+  background-color: rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  -o-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+  box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px inset, rgba(255, 255, 255, 0.3) 0 1px 0;
+}
+/* line 117, ../src/main.sass */
+#mainnav ul li a {
   -moz-border-radius: 2ex;
   -webkit-border-radius: 2ex;
   -o-border-radius: 2ex;
   -ms-border-radius: 2ex;
   -khtml-border-radius: 2ex;
   border-radius: 2ex;
-  color: #efeff4;
-  background-color: #868b96;
-}
-/* line 108, ../src/main.sass */
-#mainnav ul li a {
   text-align: center;
   width: 100%;
   display: inline-block;
   color: #b4b8c5;
 }
-/* line 113, ../src/main.sass */
+/* line 123, ../src/main.sass */
 #mainnav ul li a:hover {
   color: #efeff4;
 }
-/* line 157, ../src/main.sass */
+/* line 166, ../src/main.sass */
 #mainnav ul li:last-child {
   margin-right: 0;
 }
 
-/* line 160, ../src/main.sass */
+/* line 169, ../src/main.sass */
 #mainlinks {
   display: inline;
   float: left;
@@ -263,7 +303,7 @@ h1 {
   overflow-x: hidden;
 }
 
-/* line 163, ../src/main.sass */
+/* line 172, ../src/main.sass */
 .slideshow {
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -281,7 +321,7 @@ h1 {
   margin-right: 10px;
   width: 950px;
 }
-/* line 88, ../src/main.sass */
+/* line 97, ../src/main.sass */
 .slideshow > * {
   padding: 20px;
 }
@@ -290,7 +330,7 @@ h1 {
   overflow-x: hidden;
 }
 
-/* line 167, ../src/main.sass */
+/* line 176, ../src/main.sass */
 footer {
   display: inline;
   float: left;
@@ -303,7 +343,7 @@ footer {
   overflow-x: hidden;
 }
 
-/* line 171, ../src/main.sass */
+/* line 180, ../src/main.sass */
 .flush {
   clear: both;
 }
