--- a/layouts/main.html
+++ b/layouts/main.html
@@ -28,16 +28,6 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 
-  <!-- CSS: blueprint framework -->
-  <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
-  <!--[if lt IE 8]>
-    <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <![endif]-->
-  <!-- CSS: blueprint buttons -->
-   <link href="/css/buttons.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
-  <!-- CSS: implied media="all" -->
   <!-- Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Molengo:regular,bold' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/main.css">
@@ -52,11 +42,13 @@
 <body lang="<%= language %>" class="bp">
   <div id="container">
     <header>
-      <div id="choixlang"><%= choixlang %></div>
-      <hgroup>
+      <div id="prelinks">
+           <div id="choixlang"><%= choixlang %></div>
+           <div id="choixrss"><%= choixrss %></div>
+       </div>
+      <hgroup id="maintitle">
         <%= page_title %>
       </hgroup>
-      <div id="choixrss"><%= choixrss %></div>
       <nav id="mainnav">
           <ul>
               <%= generateMenu %>
