--- a/site/src/main.sass
+++ b/site/src/main.sass
@@ -1,6 +1,3 @@
-@import "blueprint/debug"
-@import "blueprint/buttons"
-
 $default-transition-duration: .5s
 @import "compass/css3/transition"
 
@@ -32,6 +29,8 @@ $main-background-color: $ycolorb
 
 // Background colors
 body
+  margin: 0
+  font-family: Futura, Molengo
   background: $main-background-color
   &.bp 
     background: $main-background-color
@@ -60,13 +59,18 @@ body
 * 
   +transition
 
-header
-  height: 80px
-  +border-radius(0 0 8px 8px)
-  +box-shadow(rgba(#000,.3) 0 5px 5px)
-  +linear-gradient(color-stops($ycolor5,$ycolor7))
-  hgroup
-    +column(18)
+hgroup#maintitle
+  margin: .5em 0 
+  font-size: 2em
+  h1,h2
+    &,a
+      color: $ycolor9
+      text-shadow: 0 0 2px rgba($ycolorb,.5)
+  border:
+    top: solid 1px #000
+    bottom: solid 1px #FFF
+  +box-shadow(rgba(#000,.6) 0 0 15px inset)
+  +linear-gradient(color-stops($ycolor4,$ycolor5))
 
 =debug
   +box-shadow(#FFF 0 0 3px, rgba(#000,0.2) 0 0 3px inset)
@@ -98,15 +102,9 @@ h1
     padding: 20px
 
 .block
-  +column(8)
-  +prepend-top(10px)
-  +append-bottom(20px)
   +innerblock
   &:hover
     background-color: rgba(#000,0.05)
-  &:last-child
-    +last
-
 
 =ybutton
   font-size: 14px
@@ -115,6 +113,7 @@ h1
     background-color: rgba(#000,.3)
     +box-shadow(rgba(#000,.3) 0 1px 3px inset,rgba(#FFF,.3) 0 1px 0)  
   a
+    padding: .2em
     +border-radius(2ex)
     text-align: center
     width: 100%
@@ -137,21 +136,22 @@ h1
   &:active
     +text-shadow(#3AF 0 0 4px, rgba(#000,0.5) 0px -1px 0px,rgba(#FFF,0.5) 0px 1px 0px )
 
+#prelinks
+  width: 600px
+  margin: .5em auto
+  height: 1em
+
+
 #choixlang
-  +column(3)
+  float: left
   +ybutton
 
-
 #choixrss
-  text-align: right
-  +column(3)
-  +last
+  float: right
   +ybutton
 
 #mainnav
-  +column(24)
-  +prepend-top(40px)
-  +append-bottom(40px)
+  width: 50%
   ul
     width: +span(9)
     height: 2.2ex
@@ -160,22 +160,15 @@ h1
     list-style-type: none
     margin: 0 auto
     li
-      +column(3)
       text-align: center
       +ybutton
-      &:last-child
-        +last
-
-#mainlinks
-  +column(24,false)
 
 .slideshow
   +innerblock
-  +column(24)
-
-footer
-  +column(24)
-  +last
 
 .flush
   clear: both
+
+#main
+  width: 50%
+  margin-left: 25%
